--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -6,6 +6,15 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+        <section class="header">
+            <a href="/"><img src="{{ asset('images/logo.jpg') }}" width="100"/></a>
+        </section>
+        <section class="body">
+            
+        </section>
+        <section class="footer">
+            
+        </section>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
