--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -9,19 +9,21 @@
     </head>
     <body>
         <section class="header">
-            <a href="/" class="logo"><img src="{{ asset('images/logo.jpg') }}" width="100"/></a>
-            <div>
-                <a href="/">Homepage</a>
-                <a href="/login">Login</a>
+            <div class="ac">
+                <a href="/" class="logo"><img src="{{ asset('images/logo.jpg') }}" width="100"/></a>
             </div>
+                <div class="ac">
+                    <a href="/">Homepage</a>
+                    <a href="/login">Login</a>
+                </div>
         </section>
         <section class="content">
             <div>
-                
+
             </div>
         </section>
         <section class="footer">
-            <div>
+            <div class="ac">
                 &copy; 2017 Imprint
             </div>
         </section>
