--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -23,7 +23,7 @@
             </div>
         </section>
         <section class="footer">
-            <div class="ac">
+            <div class="ac data">
                 &copy; 2017 Imprint
             </div>
         </section>
