--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Check24 test task{% endblock %}</title>
         {% block stylesheets %}
             <link href="{{ asset('styles/main.css') }}" type="text/css" rel="stylesheet" />
         {% endblock %}
