--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -13,8 +13,7 @@
                 <a href="/" class="logo"><img src="{{ asset('images/logo.jpg') }}" width="100"/></a>
             </div>
                 <div class="ac">
-                    <a href="/">Homepage</a>
-                    <a href="/login">Login</a>
+                    <a href="/">Homepage</a>&nbsp;|&nbsp;<a href="/login">Login</a>
                 </div>
         </section>
         <section class="content">
