--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -19,7 +19,7 @@
         <section class="content">
             <div>
                 {% for key, value in list %}
-                    <div>{{ value->title }}</div>
+                    <div>{{ value.title }}</div>
                 {%  endfor %}
             </div>
         </section>
