--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -23,7 +23,7 @@
                         {{ value.title }}
                         </b></p>
                         <div>{{  value.description|slice(0,100)~'...' }}</div>
-                        <p>Author: {{ value.id }}</p>
+                        <p>Author: {{ value.name }}</p>
                 {%  endfor %}
             </div>
         </section>
