--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -19,8 +19,9 @@
         <section class="content">
             <div>
                 <form method="POST" action="/log">
-                    <input type="email" value=""/>
-                    <input typpe="password" value=""/>
+                    <label>E-mail: <input type="email" value=""/></label>
+                    <label>Password: <input type="password" value=""/></label>
+                    <button type="submit"></button>
                 </form>
             </div>
         </section>
