--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -19,9 +19,9 @@
         <section class="content">
             <div>
                 <form method="POST" action="/log">
-                    <label>E-mail: <input type="email" value=""/></label>
-                    <label>Password: <input type="password" value=""/></label>
-                    <button type="submit"></button>
+                    <label>E-mail: <input type="email" name="login" value="" placeholder="10 symbols"/></label>
+                    <label>Password: <input type="password" name="pass" value="" palceholder="10 symbols"/></label>
+                    <button type="submit">LOGIN</button>
                 </form>
             </div>
         </section>
