--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -20,7 +20,7 @@
             <div>
                 <form method="POST" action="/log">
                     <label>E-mail: <input type="email" name="login" value="" placeholder="10 symbols"/></label>
-                    <label>Password: <input type="password" name="pass" value="" palceholder="10 symbols"/></label>
+                    <label>Password: <input type="password" name="pass" value="" placeholder="10 symbols"/></label>
                     <button type="submit">LOGIN</button>
                 </form>
             </div>
